<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Movie_fragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/movie_detail_title"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/movie_detail_title"
                android:textSize="12dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_detail_title_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/movie_detail_title"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/movie_detail_actor"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/movie_detail_actor"
                android:textSize="12dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_detail_actor_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/movie_detail_actor"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/movie_detail_year"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/movie_detail_year"
                android:textSize="12dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_detail_year_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/movie_detail_year"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/movie_detail_rating"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/movie_detail_rating"
                android:textSize="12dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_detail_rating_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/movie_detail_rating"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/movie_detail_runtime"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/movie_detail_runtime"
                android:textSize="12dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_detail_runtime_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/movie_detail_runtime"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/movie_detail_plot"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/movie_detail_plot"
                android:textSize="12dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_detail_plot_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/movie_detail_plot"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/movie_detail_url"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/movie_detail_url"
                android:textSize="12dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_detail_url_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp" />
        </LinearLayout></LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp">
            >

            <Button
                android:id="@+id/movie_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/movie_detail_delete" />

            <Button
                android:id="@+id/movie_return"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/movie_delete"
                android:text="@string/movie_return" />
        </RelativeLayout>

    </RelativeLayout>
</FrameLayout>